Finalized New Button Designs
Button Size can now be changed through hamster.properties